# Spectrophane

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dev_tools/: sanitize_images.py
example_scripts/: gamut.py  lithophane_creation.py  training.py  training_verify_images.py
src/spectrophane/color/: conversions.py  spectral_helper.py
src/spectrophane/core/: color_transformations.py  dataclasses.py  forward_jax.py  jax_utils.py  numeric_backend.py  transformations.py
src/spectrophane/evaluation/: cache.py  evaluator.py  renormalization.py
src/spectrophane/inverse/: inverter.py  stack_generation.py
src/spectrophane/io/: data_io.py  material_image_processing.py  material_parameter.py  material_spectrum_processing.py  misc_data_import.py  resources.py  stack_io.py
src/spectrophane/lithophane/: export.py  generation.py  ingest_image.py  pipeline.py  solid_generation.py
src/spectrophane/material_characterization/: mix_theories.py  parameter_training.py
src/spectrophane/physics/: mix_theories.py
src/spectrophane/pipeline/: lithophane_factories.py  lithophane_pipeline.py  training_pipeline.py
src/spectrophane/scripts/: install.py
src/spectrophane/training/: ingest_images.py  ingest_spectra.py  ingest_stacks.py  material_parameter.py  trainer.py
tests/: conftest.py
tests/application/: conftest.py
tests/application/cli/: test_cli_lithophane.py  (+1 more)
tests/color/: test_conversions.py  test_spectral_helper.py
tests/core/: test_abstractions.py  test_color_transformations.py  test_dataclasses.py  test_jax_utils.py  test_numeric_backend.py  test_transformations.py
tests/dev_tools/: test_sanitize_images.py
tests/evaluation/: test_cache.py  test_evaluator.py  test_stack_generation.py
tests/inverse/: test_inverter.py  test_stack_generation.py
tests/io/: test_material_image_processing.py  test_material_parameter.py  test_material_spectrum_processing.py  test_misc_data_Import.py  test_stack_io.py
tests/lithophane/: test_export_stl.py  test_ingest_image.py  test_pipeline.py  test_solid_generation.py
tests/material_characterization/: test_mix_theories.py  test_parameter_training.py
tests/physics/: test_mix_theories.py
tests/pipeline/: test_lithophane_factories.py
tests/training/: test_ingest_images.py  test_ingest_spectra.py  test_ingest_stacks.py  test_material_parameter.py  test_trainer.py
(+6 files in other folders)
